--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
     <title>Document</title>
 </head>
 <body>
     <!-- github  -->
     <h1>Lorem ipsum dolor sit amet.</h1>
 
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit commodi cumque perspiciatis, veniam ipsam aut fugiat ut facilis voluptatibus quos voluptatum neque, voluptates doloribus numquam nemo cum iusto quidem sed consequuntur! Aperiam, quam ipsa vel quae, maxime voluptatem laborum laboriosam ducimus animi provident blanditiis numquam quia fugiat expedita. Accusamus sit, ipsa saepe voluptates quia provident rem porro eveniet sint ratione officiis temporibus quidem molestias voluptatem nulla facilis dicta illum debitis deserunt quo enim! Modi placeat cumque doloremque dolorem dicta nam, nostrum, aliquam fugiat, hic nemo eligendi obcaecati beatae pariatur minima asperiores ipsum veritatis. Veniam ab asperiores sit voluptatibus fuga?</p>
 
 
 
